resolve ipad nav bar cutoff

--- a/stylesheet_home.css
+++ b/stylesheet_home.css
@@ -35,6 +35,8 @@ body {
 .logocontainer {
 	float: left;
 	margin-top: 18px;
+	width: 350px;
+	
 }
 
 #logoimage {
@@ -54,7 +56,7 @@ ul {
 
 li {
 	float: left;
-	margin: 28px 10px 5px 10px;
+	margin: 32px 10px 5px 10px;
 }
 
 a {
@@ -154,7 +156,7 @@ span {
 	}
 	
 	.container {
-	width: 800px;
+	width: 770px;
 	margin: 0 auto;
 	}
 
